Endpoint para listagem de posição
